--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "12-Employee-Tracker-MB",
+  "name": "employee-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "employees.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Magrishb/12-Employee-Tracker-MB.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Magrishb/12-Employee-Tracker-MB/issues"
-  },
-  "homepage": "https://github.com/Magrishb/12-Employee-Tracker-MB#readme",
   "dependencies": {
-    "mysql": "^2.18.1"
+    "asciiart-logo": "^0.2.6",
+    "console.table": "^0.10.0",
+    "inquirer": "^7.0.0",
+    "mysql": "^2.17.1"
   }
 }
+
